--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Product Card</title>
   </head>
   <body>
     <main>
